--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -3,11 +3,19 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/main_nav"
-            app:startDestination="@id/menuFragment">
+            app:startDestination="@id/mealOverviewFragment">
 
     <fragment
             android:id="@+id/menuFragment"
             android:name="de.nicidienase.geniesser_app.MenuFragment"
             android:label="MenuFragment"
             tools:layout="@layout/fragment_menu"/>
+    <fragment
+            android:id="@+id/mealOverviewFragment"
+            android:name="de.nicidienase.geniesser_app.MealOverviewFragment"
+            android:label="MealOverviewFragment">
+        <action
+                android:id="@+id/action_mealOverviewFragment_to_menuFragment"
+                app:destination="@id/menuFragment"/>
+    </fragment>
 </navigation>
