--- a/app/src/main/res/layout/fragment_meal_overview.xml
+++ b/app/src/main/res/layout/fragment_meal_overview.xml
@@ -16,7 +16,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-            <Toolbar
+            <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
