--- a/app/src/main/res/layout/item_dish.xml
+++ b/app/src/main/res/layout/item_dish.xml
@@ -16,36 +16,50 @@
             android:layout_height="wrap_content">
 
         <TextView
+                android:text="@{dish.category.categoryName}"
+                tools:text="Hauptgericht"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/categoryText"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                />
+
+        <TextView
                 android:text="@{dish.name}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/nameText"
                 tools:text="Paniertes Schnitzel"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:singleLine="false"
                 android:maxLines="2"
                 android:ellipsize="end"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toStartOf="@+id/priceText"
-                android:layout_marginBottom="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintTop_toBottomOf="@+id/categoryText"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintVertical_bias="0.0"/>
 
         <TextView
                 price="@{dish.price}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/priceText"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp"
                 tools:text="3.00 €"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/nameText"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
