--- a/app/src/main/res/layout/fragment_dish_detail.xml
+++ b/app/src/main/res/layout/fragment_dish_detail.xml
@@ -1,24 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout android:id="@+id/layout"
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
+	xmlns:android="http://schemas.android.com/apk/res/android">
 
+	<data>
+		<variable
+			name="dish"
+			type="de.nicidienase.geniesser_app.data.Dish" />
+	</data>
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:background="?attr/selectableItemBackground">
+		android:layout_height="wrap_content">
 
-		<TextView
-			android:id="@+id/categoryText"
-			android:layout_width="wrap_content"
+		<com.google.android.material.appbar.AppBarLayout
+			android:id="@+id/appbar"
+			android:layout_width="0dp"
 			android:layout_height="wrap_content"
-			android:layout_marginStart="8dp"
-			android:layout_marginTop="8dp"
-			android:text="@{dish.category.categoryName}"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent"
-			tools:text="Hauptgericht" />
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintTop_toTopOf="parent">
+
+			<androidx.appcompat.widget.Toolbar
+				android:id="@+id/toolbar"
+				app:title="@{dish.category.categoryName}"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"/>
+
+		</com.google.android.material.appbar.AppBarLayout>
 
 		<TextView
 			android:id="@+id/nameText"
@@ -28,8 +36,6 @@
 			android:layout_marginEnd="8dp"
 			android:layout_marginStart="16dp"
 			android:layout_marginTop="8dp"
-			android:ellipsize="end"
-			android:maxLines="2"
 			android:singleLine="false"
 			android:text="@{dish.name}"
 			android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -37,29 +43,20 @@
 			app:layout_constraintEnd_toStartOf="@+id/priceText"
 			app:layout_constraintHorizontal_bias="1.0"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@+id/categoryText"
-			app:layout_constraintVertical_bias="0.0"
+			app:layout_constraintTop_toBottomOf="@+id/appbar"
 			tools:text="Paniertes Schnitzel" />
 
 		<TextView
-			android:id="@+id/priceText"
 			price="@{dish.price}"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginBottom="8dp"
-			android:layout_marginEnd="8dp"
-			android:textAppearance="@style/TextAppearance.AppCompat.Large"
-			app:layout_constraintBottom_toBottomOf="parent"
+			android:id="@+id/priceText"
 			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintTop_toTopOf="@+id/nameText"
-			tools:text="3.00 €" />
+			android:layout_marginEnd="8dp"
+			tools:text="3.00 €"
+			android:textAppearance="@style/TextAppearance.AppCompat.Large"
+			android:layout_marginBottom="8dp"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintTop_toTopOf="@+id/nameText"/>
 	</androidx.constraintlayout.widget.ConstraintLayout>
-
-	<data>
-
-		<variable
-			name="dish"
-			type="de.nicidienase.geniesser_app.data.Dish" />
-	</data>
-
 </layout>
