--- a/app/src/main/res/layout/fragment_dish_detail.xml
+++ b/app/src/main/res/layout/fragment_dish_detail.xml
@@ -1,32 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools">
 
-	<data>
-		<variable
-			name="dish"
-			type="de.nicidienase.geniesser_app.data.Dish" />
-	</data>
 	<androidx.constraintlayout.widget.ConstraintLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
-
-		<com.google.android.material.appbar.AppBarLayout
-			android:id="@+id/appbar"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintTop_toTopOf="parent">
-
-			<androidx.appcompat.widget.Toolbar
-				android:id="@+id/toolbar"
-				app:title="@{dish.category.categoryName}"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"/>
-
-		</com.google.android.material.appbar.AppBarLayout>
 
 		<androidx.appcompat.widget.AppCompatTextView
 			android:id="@+id/nameText"
@@ -47,16 +26,39 @@
 			tools:text="Paniertes Schnitzel" />
 
 		<androidx.appcompat.widget.AppCompatTextView
+			android:id="@+id/priceText"
 			price="@{dish.price}"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:id="@+id/priceText"
-			app:layout_constraintEnd_toEndOf="parent"
-			android:layout_marginEnd="8dp"
-			tools:text="3.00 €"
-			android:textAppearance="@style/TextAppearance.AppCompat.Large"
 			android:layout_marginBottom="8dp"
+			android:layout_marginEnd="8dp"
+			android:textAppearance="@style/TextAppearance.AppCompat.Large"
 			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintTop_toTopOf="@+id/nameText"/>
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintTop_toTopOf="@+id/nameText"
+			tools:text="3.00 €" />
+
+		<com.google.android.material.appbar.AppBarLayout
+			android:id="@+id/appbar"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent">
+
+			<androidx.appcompat.widget.Toolbar
+				android:id="@+id/toolbar"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				app:title="@{dish.category.categoryName}" />
+
+		</com.google.android.material.appbar.AppBarLayout>
 	</androidx.constraintlayout.widget.ConstraintLayout>
+
+	<data>
+
+		<variable
+			name="dish"
+			type="de.nicidienase.geniesser_app.data.Dish" />
+	</data>
 </layout>
