--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -7,19 +7,6 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent">
 
-		<com.google.android.material.floatingactionbutton.FloatingActionButton
-			android:id="@+id/fab_back"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_marginStart="8dp"
-			android:layout_marginTop="8dp"
-			android:clickable="true"
-			android:focusable="true"
-			android:onClick="@{(view) -> Navigation.findNavController(view).navigateUp()}"
-			app:backgroundTint="#EECACACA"
-			app:fabSize="mini"
-			app:srcCompat="@drawable/ic_action_back" />
-
 		<ScrollView
 			android:layout_width="match_parent"
 			android:layout_height="match_parent">
@@ -28,7 +15,7 @@
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content">
 
-				<TextView
+				<androidx.appcompat.widget.AppCompatTextView
 					android:id="@+id/textView2"
 					textHtml="@{item.content}"
 					android:layout_width="0dp"
@@ -69,6 +56,19 @@
 
 			</androidx.constraintlayout.widget.ConstraintLayout>
 		</ScrollView>
+
+		<com.google.android.material.floatingactionbutton.FloatingActionButton
+			android:id="@+id/fab_back"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginStart="8dp"
+			android:layout_marginTop="8dp"
+			android:clickable="true"
+			android:focusable="true"
+			android:onClick="@{(view) -> Navigation.findNavController(view).navigateUp()}"
+			app:backgroundTint="#EECACACA"
+			app:fabSize="mini"
+			app:srcCompat="@drawable/ic_action_back" />
 	</FrameLayout>
 
 	<data>
