color header in Meal Overview

--- a/app/src/main/res/layout/item_dish.xml
+++ b/app/src/main/res/layout/item_dish.xml
@@ -14,8 +14,8 @@
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="8dp"
-			android:backgroundTint="@color/colorPrimary"
-			android:backgroundTintMode="screen"
+			android:background="@color/colorPrimary"
+			android:textColor="@android:color/white"
 			android:gravity="center_horizontal"
 			android:text="@{dish.category.categoryName}"
 			app:layout_constraintEnd_toEndOf="parent"
