--- a/app/src/main/res/layout/fragment_meal_overview.xml
+++ b/app/src/main/res/layout/fragment_meal_overview.xml
@@ -3,35 +3,25 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<androidx.constraintlayout.widget.ConstraintLayout
+		android:id="@+id/root"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:orientation="vertical">
 
-		<androidx.viewpager.widget.ViewPager
-			android:id="@+id/pager"
-			android:layout_width="0dp"
-			android:layout_height="0dp"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@+id/tabs">
+<!--		<com.google.android.material.appbar.AppBarLayout-->
+<!--			android:id="@+id/appbar"-->
+<!--			android:layout_width="0dp"-->
+<!--			android:layout_height="wrap_content"-->
+<!--			app:layout_constraintEnd_toEndOf="parent"-->
+<!--			app:layout_constraintStart_toStartOf="parent"-->
+<!--			app:layout_constraintTop_toTopOf="parent">-->
 
-		</androidx.viewpager.widget.ViewPager>
+<!--			<androidx.appcompat.widget.Toolbar-->
+<!--				android:id="@+id/toolbar"-->
+<!--				android:layout_width="match_parent"-->
+<!--				android:layout_height="wrap_content" />-->
 
-		<com.google.android.material.appbar.AppBarLayout
-			android:id="@+id/appbar"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent">
-
-			<androidx.appcompat.widget.Toolbar
-				android:id="@+id/toolbar"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content" />
-
-		</com.google.android.material.appbar.AppBarLayout>
+<!--		</com.google.android.material.appbar.AppBarLayout>-->
 
 		<com.google.android.material.tabs.TabLayout
 			android:id="@+id/tabs"
@@ -40,6 +30,17 @@
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toBottomOf="@+id/appbar" />
+
+		<androidx.viewpager2.widget.ViewPager2
+			android:id="@+id/pager"
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/tabs">
+
+		</androidx.viewpager2.widget.ViewPager2>
 
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
