--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools">
 
-	<androidx.constraintlayout.widget.ConstraintLayout
+	<FrameLayout
+		android:id="@+id/root"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent">
 
 		<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
 			android:id="@+id/swipe_refresh_layout"
-			android:layout_width="0dp"
-			android:layout_height="0dp"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@+id/appbar">
-<!--			app:onRefreshListener="@{() -> vm.update()}"-->
-<!--			app:refreshing="@{vm.updating}"-->
+			android:layout_width="match_parent"
+			android:layout_height="match_parent">
+			<!--			app:onRefreshListener="@{() -> vm.update()}"-->
+			<!--			app:refreshing="@{vm.updating}"-->
 
 			<androidx.recyclerview.widget.RecyclerView
 				android:id="@+id/news_list"
@@ -26,23 +22,7 @@
 
 		</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-		<com.google.android.material.appbar.AppBarLayout
-			android:id="@+id/appbar"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent">
-
-			<androidx.appcompat.widget.Toolbar
-				android:id="@+id/toolbar"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content" />
-
-		</com.google.android.material.appbar.AppBarLayout>
-
-
-	</androidx.constraintlayout.widget.ConstraintLayout>
+	</FrameLayout>
 
 	<data>
 
