--- a/app/src/main/res/layout/fragment_meal_overview.xml
+++ b/app/src/main/res/layout/fragment_meal_overview.xml
@@ -7,29 +7,13 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:orientation="vertical">
-
-<!--		<com.google.android.material.appbar.AppBarLayout-->
-<!--			android:id="@+id/appbar"-->
-<!--			android:layout_width="0dp"-->
-<!--			android:layout_height="wrap_content"-->
-<!--			app:layout_constraintEnd_toEndOf="parent"-->
-<!--			app:layout_constraintStart_toStartOf="parent"-->
-<!--			app:layout_constraintTop_toTopOf="parent">-->
-
-<!--			<androidx.appcompat.widget.Toolbar-->
-<!--				android:id="@+id/toolbar"-->
-<!--				android:layout_width="match_parent"-->
-<!--				android:layout_height="wrap_content" />-->
-
-<!--		</com.google.android.material.appbar.AppBarLayout>-->
-
 		<com.google.android.material.tabs.TabLayout
 			android:id="@+id/tabs"
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@+id/appbar" />
+			app:layout_constraintTop_toBottomOf="parent" />
 
 		<androidx.viewpager2.widget.ViewPager2
 			android:id="@+id/pager"
