--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -15,20 +15,6 @@
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content">
 
-				<androidx.appcompat.widget.AppCompatTextView
-					android:id="@+id/textView2"
-					textHtml="@{item.content}"
-					android:layout_width="0dp"
-					android:layout_height="wrap_content"
-					android:layout_marginEnd="8dp"
-					android:layout_marginStart="8dp"
-					android:layout_marginTop="8dp"
-					app:layout_constraintEnd_toEndOf="parent"
-					app:layout_constraintHorizontal_bias="0.0"
-					app:layout_constraintStart_toStartOf="parent"
-					app:layout_constraintTop_toBottomOf="@+id/title_text"
-					tools:text="@tools:sample/lorem/random" />
-
 				<androidx.appcompat.widget.AppCompatImageView
 					android:id="@+id/appCompatImageView2"
 					srcCompat="@{item.imageUrl}"
@@ -53,6 +39,35 @@
 					app:layout_constraintStart_toStartOf="parent"
 					app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2"
 					tools:text="@tools:sample/cities" />
+
+				<androidx.appcompat.widget.AppCompatTextView
+					android:id="@+id/content_text"
+					textHtml="@{item.content}"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_marginEnd="8dp"
+					android:layout_marginStart="8dp"
+					android:layout_marginTop="8dp"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintHorizontal_bias="0.0"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toBottomOf="@+id/title_text"
+					tools:text="@tools:sample/lorem/random" />
+
+				<androidx.appcompat.widget.AppCompatTextView
+					android:id="@+id/debugText"
+					android:layout_width="0dp"
+					android:layout_height="wrap_content"
+					android:layout_marginEnd="8dp"
+					android:layout_marginStart="8dp"
+					android:layout_marginTop="8dp"
+					android:layout_marginBottom="8dp"
+					android:visibility="gone"
+					android:text="@{item.toString()}"
+					app:layout_constraintTop_toBottomOf="@id/content_text"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintEnd_toEndOf="parent"
+					app:layout_constraintBottom_toBottomOf="parent"/>
 
 			</androidx.constraintlayout.widget.ConstraintLayout>
 		</ScrollView>
