--- a/app/src/main/res/menu/news_menu.xml
+++ b/app/src/main/res/menu/news_menu.xml
@@ -2,8 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-            android:id="@+id/action_select_location"
-            android:title="@string/select_location"
-            android:icon="@drawable/ic_action_location"
-            app:showAsAction="always"/>
+        android:id="@+id/action_select_location"
+        android:title="@string/select_location"
+        android:icon="@drawable/ic_action_location"
+        app:showAsAction="always"/>
+    <item
+        android:id="@+id/action_cleanup_news"
+        android:title="Cleanup News"/>
 </menu>
