add preferences to toggle hiding of past days and prices for externals

--- a/app/src/main/res/menu/news_menu.xml
+++ b/app/src/main/res/menu/news_menu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_select_location"
-        android:title="@string/select_location"
-        android:icon="@drawable/ic_action_location"
+        android:id="@+id/action_settings"
+        android:title="Settings"
+        android:icon="@drawable/ic_action_settings"
         app:showAsAction="always"/>
     <item
         android:id="@+id/action_cleanup_news"
