--- a/app/src/main/res/menu/overview_menu.xml
+++ b/app/src/main/res/menu/overview_menu.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-            android:id="@+id/action_select_location"
-            android:title="@string/select_location"
-            android:icon="@drawable/ic_action_location"
-            app:showAsAction="always"/>
+        android:id="@+id/action_settings"
+        android:title="Settings"
+        android:icon="@drawable/ic_action_settings"
+        app:showAsAction="always"/>
     <item
         android:id="@+id/action_goto_today"
         android:icon="@drawable/ic_action_date"
