moving prefs to bottomNav

--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -10,4 +10,9 @@
 		android:title="News"
 		android:icon="@drawable/ic_action_location"
 		android:id="@+id/newsListFragment"/>
+
+	<item
+		android:title="Preferences"
+		android:icon="@drawable/ic_action_settings"
+		android:id="@+id/prefFragment"/>
 </menu>
