--- a/app/src/main/res/layout/item_location.xml
+++ b/app/src/main/res/layout/item_location.xml
@@ -8,7 +8,7 @@
 		android:layout_height="wrap_content">
 
 		<androidx.appcompat.widget.AppCompatTextView
-			android:id="@+id/textView"
+			android:id="@+id/textLocationName"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginBottom="16dp"
@@ -17,11 +17,26 @@
 			android:layout_marginTop="16dp"
 			android:text="@{location.name}"
 			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintEnd_toStartOf="@id/textLocationId"
 			app:layout_constraintHorizontal_bias="0.0"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toTopOf="parent"
 			tools:text="@tools:sample/cities" />
+
+		<androidx.appcompat.widget.AppCompatTextView
+			android:id="@+id/textLocationId"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@{String.format(@string/braces, location.locationId)}"
+			android:layout_marginBottom="16dp"
+			android:layout_marginEnd="16dp"
+			android:layout_marginStart="16dp"
+			android:layout_marginTop="16dp"
+			tools:text="2342"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintBottom_toBottomOf="parent"
+			/>
 
 	</androidx.constraintlayout.widget.ConstraintLayout>
 
