--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -33,6 +33,25 @@
 			app:layout_constraintTop_toTopOf="parent"
 			tools:text="@tools:sample/cities" />
 
+		<FrameLayout
+				android:layout_width="0dp"
+				android:layout_height="0dp"
+				android:background="#80000000"
+				android:visibility="@{item.active ? View.INVISIBLE : View.VISIBLE}"
+				tools:visibility="visible"
+				app:layout_constraintBottom_toBottomOf="@id/appCompatImageView"
+				app:layout_constraintEnd_toEndOf="@+id/appCompatImageView"
+				app:layout_constraintStart_toStartOf="@id/appCompatImageView"
+				app:layout_constraintTop_toTopOf="@id/appCompatImageView">
+
+			<androidx.appcompat.widget.AppCompatImageView
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:layout_margin="8dp"
+					app:srcCompat="@drawable/ic_action_archive" />
+
+		</FrameLayout>
+
 	</androidx.constraintlayout.widget.ConstraintLayout>
 
 	<data>
@@ -40,6 +59,8 @@
 		<variable
 			name="item"
 			type="de.nicidienase.geniesser_app.data.News" />
+
+		<import type="android.view.View" />
 	</data>
 
 </layout>
