--- a/app/src/main/res/layout/fragment_news_detail.xml
+++ b/app/src/main/res/layout/fragment_news_detail.xml
@@ -20,6 +20,7 @@
 					srcCompat="@{item.imageUrl}"
 					android:layout_width="match_parent"
 					android:layout_height="0dp"
+					android:transitionName="@{@string/transition_name_news_image(item.backendId)}"
 					app:layout_constraintDimensionRatio="H,4:3"
 					app:layout_constraintEnd_toEndOf="parent"
 					app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +35,7 @@
 					android:layout_marginStart="8dp"
 					android:layout_marginTop="8dp"
 					android:text="@{item.title}"
-					android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+					android:textAppearance="@style/TextAppearance.AppCompat.Medium"				android:transitionName="@{@string/transition_name_news_title(item.backendId)}"
 					app:layout_constraintEnd_toEndOf="parent"
 					app:layout_constraintStart_toStartOf="parent"
 					app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2"
