--- a/app/src/main/res/layout/fragment_dish_detail.xml
+++ b/app/src/main/res/layout/fragment_dish_detail.xml
@@ -22,6 +22,7 @@
 			android:layout_marginTop="8dp"
 			android:singleLine="false"
 			android:text="@{dish.name}"
+			android:transitionName="@{@string/transition_name_meal_title(dish.dishId)}"
 			android:textAppearance="@style/TextAppearance.AppCompat.Medium"
 			app:layout_constraintEnd_toStartOf="@+id/priceText"
 			app:layout_constraintStart_toStartOf="parent"
@@ -36,6 +37,7 @@
 			android:layout_marginEnd="8dp"
 			android:layout_marginBottom="8dp"
 			android:textAppearance="@style/TextAppearance.AppCompat.Large"
+			android:transitionName="@{@string/transition_name_meal_price(dish.dishId)}"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintTop_toTopOf="@+id/nameText"
 			tools:text="3.00 €" />
