--- a/app/src/main/res/layout/item_dish.xml
+++ b/app/src/main/res/layout/item_dish.xml
@@ -36,6 +36,7 @@
 			android:singleLine="false"
 			android:text="@{dish.name}"
 			android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+			android:transitionName="@{@string/transition_name_meal_title(dish.dishId)}"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toStartOf="@+id/priceText"
 			app:layout_constraintHorizontal_bias="1.0"
@@ -52,6 +53,7 @@
 			android:layout_marginBottom="8dp"
 			android:layout_marginEnd="8dp"
 			android:textAppearance="@style/TextAppearance.AppCompat.Large"
+			android:transitionName="@{@string/transition_name_meal_price(dish.dishId)}"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintTop_toTopOf="@+id/nameText"
