add tab for FcCampus Meal Overview

--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<item
-		android:title="Meals"
-		android:icon="@drawable/ic_action_date"
-		android:id="@+id/mealOverviewFragment"/>
+    <item
+            android:id="@+id/mealOverviewFragment"
+            android:icon="@drawable/ic_action_date"
+            android:title="Meals" />
 
-	<item
-		android:title="News"
-		android:icon="@drawable/ic_action_location"
-		android:id="@+id/newsListFragment"/>
+    <item
+            android:id="@+id/fcCampusOverviewFragment"
+            android:icon="@drawable/ic_fccampus_cafe"
+            android:title="FCCampus" />
 
-	<item
-		android:title="Preferences"
-		android:icon="@drawable/ic_action_settings"
-		android:id="@+id/prefFragment"/>
+    <item
+            android:id="@+id/newsListFragment"
+            android:icon="@drawable/ic_action_location"
+            android:title="News" />
+
+    <item
+            android:id="@+id/prefFragment"
+            android:icon="@drawable/ic_action_settings"
+            android:title="Preferences" />
 </menu>
