--- a/app/src/main/res/layout/fragment_fc_overview.xml
+++ b/app/src/main/res/layout/fragment_fc_overview.xml
@@ -8,7 +8,7 @@
         android:orientation="vertical">
 
     <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabs"
+            android:id="@+id/fc_tabs"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
@@ -16,13 +16,13 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/pager"
+            android:id="@+id/fc_pager"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tabs">
+            app:layout_constraintTop_toBottomOf="@+id/fc_tabs">
 
     </androidx.viewpager2.widget.ViewPager2>
 
