--- a/app/src/main/res/layout/item_fc_dish.xml
+++ b/app/src/main/res/layout/item_fc_dish.xml
@@ -8,7 +8,7 @@
 
         <variable
                 name="dish"
-                type="de.nicidienase.geniesser_app.api.fccampus.MealDto" />
+                type="de.nicidienase.geniesser_app.data.FcMeal" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
