--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -4,7 +4,7 @@
     <item
             android:id="@+id/mealOverviewFragment"
             android:icon="@drawable/ic_action_date"
-            android:title="Meals" />
+            android:title="GenussAPP" />
 
     <item
             android:id="@+id/fcCampusOverviewFragment"
