--- a/app/src/main/res/menu/news_menu.xml
+++ b/app/src/main/res/menu/news_menu.xml
@@ -3,5 +3,5 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_cleanup_news"
-        android:title="Cleanup News"/>
+        android:title="@string/cleanup_news"/>
 </menu>
