--- a/app/src/main/res/menu/overview_menu_fc.xml
+++ b/app/src/main/res/menu/overview_menu_fc.xml
@@ -4,10 +4,6 @@
     <item
         android:id="@+id/action_goto_today"
         android:icon="@drawable/ic_action_date"
-        android:title="Go to today"
+        android:title="@string/go_to_today"
         app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/action_info"
-        android:title="Essenszeiten"/>
 </menu>
