add allergens for FC menu

--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -11,7 +11,9 @@
 			android:id="@+id/menu_list"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			tools:listitem="@layout/item_dish" />
+			tools:listitem="@layout/item_fc_dish"
+			/>
+<!--			tools:listitem="@layout/item_dish"-->
 
 	</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </layout>
