--- a/app/src/main/res/layout/item_fc_dish.xml
+++ b/app/src/main/res/layout/item_fc_dish.xml
@@ -9,6 +9,8 @@
         <variable
                 name="dish"
                 type="de.nicidienase.geniesser_app.data.fccampus.FcMeal" />
+
+        <import type="android.view.View"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,39 +19,54 @@
             android:background="?attr/selectableItemBackground">
 
         <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/nameText"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:singleLine="false"
-                android:text="@{dish.name}"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:transitionName="@{@string/transition_name_meal_title(dish.id)}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/priceText"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
-                tools:text="Paniertes Schnitzel" />
+            android:id="@+id/nameText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="8dp"
+            android:ellipsize="end"
+            android:maxLines="4"
+            android:singleLine="false"
+            android:text="@{dish.name}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:transitionName="@{@string/transition_name_meal_title(dish.id)}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/priceText"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.284"
+            tools:text="Knuspriger Schweinekrustenbraten mit Senf und Kümmel, Weißkrautgemüse und hausgemachten Eierspätzle" />
 
         <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/priceText"
-                price="@{dish.price}"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:transitionName="@{@string/transition_name_meal_price(dish.id)}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/nameText"
-                tools:text="3.00 €" />
+            android:id="@+id/priceText"
+            price="@{dish.price}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:transitionName="@{@string/transition_name_meal_price(dish.id)}"
+            app:layout_constraintBottom_toBottomOf="@id/allergensText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/nameText"
+            app:layout_constraintVertical_bias="0.0"
+            tools:text="3.00 €" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/allergensText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="8dp"
+            android:text="@{@string/allergens(dish.allergens)}"
+            android:textColor="@android:color/darker_gray"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintEnd_toEndOf="@+id/nameText"
+            app:layout_constraintStart_toStartOf="@+id/nameText"
+            app:layout_constraintTop_toBottomOf="@+id/nameText"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="@{dish.allergens.length() == 0 ? View.GONE : View.VISIBLE}"
+            tools:text="Allergene: Ei,Milch,Sellerie,Senf,Weizen,Schwefeldioxid,Ei,Milch,Sellerie,Senf,Weizen,Schwefeldioxid" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
